# data_2_bots_tech_assessment

./: README.md  main.py  pyproject.toml  requirements.txt
schema/: schema_1.json  schema_2.json
tests/: test_main.py
