[tool.poetry]
name = "data_2_bots_tech_assesment"
version = "0.1.0"
description = "Data2Bots Technical Assesment"
authors = ["Temiloluwa Awoyele <awoyeletemiloluwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
